# pravasi-tours-travels

./: .editorconfig  .gitignore  BEFORE_AFTER_COMPARISON.md  BUNDLE_OPTIMIZATION_BEFORE_AFTER.md  BUNDLE_OPTIMIZATION_REPORT.md  BUNDLE_OPTIMIZATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  FINAL_CHECKLIST.md  GIT_PUSH_SUMMARY.md  LICENSE  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  PERFORMANCE_TESTING_GUIDE.md  PRODUCTION_FIXES_SUMMARY.md  README.md  README_DOCUMENTATION.md  TESTING_GUIDE.md  backend_test.py  design_guidelines.json
backend/: .dockerignore  .env  .env.example  .gitignore  BEFORE_AFTER_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_DOCUMENTATION_INDEX.md  DOCKER_ENV_SETUP_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_VERIFICATION_REPORT.md  Dockerfile  ENDPOINT_SECURITY_MATRIX.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_DEPLOYMENT_SUMMARY.txt  RENDER_QUICK_START.md  RENDER_READINESS_REPORT.md  RENDER_YES_IT_WORKS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-production.txt  requirements.txt  server.py  test_critical_features.py  test_integration.py  verify-deployment.sh  verify_deployment.py
backend/docs/: deployment-production.md  docker.md
backend/scripts/: verify-deployment.sh  verify_deployment.py
backend/src/pravasi_api/: auth.py  config.py  database.py  main.py  models.py
backend/tests/: conftest.py  test_critical_features.py  test_integration.py
(+77 files in other folders)
