[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pravasi-tours-api"
version = "0.1.0"
description = "Backend API for Pravasi Tours & Travels"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency injection relies on calling Depends()/Query()/Header()
# in argument defaults; this is the framework's documented pattern, not a bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
# Vehicle and route data are literal catalog entries, not logic.
"src/pravasi_api/data/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = false
ignore_missing_imports = true
